fixed text sizing on small screens

--- a/src/AddSession/AddSession.css
+++ b/src/AddSession/AddSession.css
@@ -6,6 +6,7 @@
 
 
 input[type=text] {
+    max-width: 87%;
     margin-top: 10px;
     margin-bottom: 25px;
 }
