--- a/src/UserHome/UserHome.css
+++ b/src/UserHome/UserHome.css
@@ -1,6 +1,7 @@
 li {
     
     width: 30%;
+    max-width: 87%;
     list-style-type: none;
     margin: 20px;
     color: black;
@@ -29,6 +30,7 @@ ul {
 
 li a:link{
     color: black;
+    font-size: 2.5vw;
 }
 
 li a:visited {
